frontend.css
/* ... */
					#kompassi_schedule_filters option {
						background-color: #fff;
						color: #000;
					}
				#kompassi_schedule_filters input:not(:placeholder-shown),
				#kompassi_schedule_filters select:has(option:checked:not([value="0"])) {
					background-color: var(--kompassi-button-fg-active);
					color: var(--kompassi-button-bg-active);
				}
					#kompassi_schedule_filters select:has(option:checked:not([value="0"])) {
						background-image: url(images/icon_dropdown_black.svg);
					}



			#kompassi_schedule_filters a {
				color: var(--kompassi-button-fg-active);
				text-decoration: underline;
			}


@container kompassi-integration (min-width: 700px) {
	#kompassi_schedule_filters > * {
		margin-right: 0.5em;
		width: auto;
		max-width: 16em;
	}
	#kompassi_schedule_filters .filter-text {
		width: 20em;
		max-width: 20em;
	}
}

/*
 *  Modal
 *
 */

#kompassi_modal {
	position: fixed;
	width: 100vw;
	height: 100vh;
	left: 0;
	top: 0;
	bottom: 0;
	z-index: 100000;

	background-color: #f7f7f7;
	box-shadow: var(--kompassi-box-shadow);
	border-radius: var(--kompassi-border-radius);

	overflow: hidden;
}

#kompassi_modal {
	--kompassi-button-bg: #fafafa;
	display: flex;
	flex-direction: column;
}
	#kompassi_modal .header {
		display: grid;
		grid-template-columns: auto max-content;
		grid-template-areas: 'title actions';
		grid-gap: 1.5em;
		padding: 1.5em;
		background-color: #fff;
	}
		#kompassi_modal .header .title {
			font-size: 150%;
			line-height: 1.3em;
			align-self: center;
		}
		#kompassi_modal .header .actions {
			--kompassi-button-padding: 0.35em;
			margin-right: 0;
			margin-bottom: 0;
			line-height: 0;
		}
			#kompassi_modal .header .actions a::before {
				opacity: 1;
			}

		#kompassi_modal .content {
			display: flex;
			flex-direction: column;
			flex: auto;
			overflow-y: auto;
			background:
				/* Shadow covers */
				linear-gradient(var(--kompassi-modal-bg) 30%, rgba(255,255,255,0)),
				linear-gradient(rgba(255,255,255,0), var(--kompassi-modal-bg) 70%) 0 100%,

				/* Shadows */
				radial-gradient(farthest-side at 50% 0, rgba(0,0,0,.2), rgba(0,0,0,0)),
				radial-gradient(farthest-side at 50% 100%, rgba(0,0,0,.2), rgba(0,0,0,0)) 0 100%;

			background-repeat: no-repeat;
			background-color: var(--kompassi-modal-bg);
			background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;

			/* Opera doesn't support this in the shorthand */
			background-attachment: local, local, scroll, scroll;
		}
			#kompassi_modal .content .main,
			#kompassi_modal .content .meta {
				padding: 1.5em;
			}
				#kompassi_modal .content .main {
					flex: auto;
					display: flex;
					flex-direction: column;
				}
					#kompassi_modal .content .main .short_blurb:not(:empty) {
						order: -2;
						font-style: oblique;
						font-weight: bold;
						letter-spacing: 0.015em;
						margin-bottom: 1em;
					}
					#kompassi_modal .content .main .description {
						order: -1;
						margin-bottom: 1em;
					}
				#kompassi_modal .content .meta {
					flex: 0 0 min-content;
					background-color: #fff;
				}
					#kompassi_modal .meta .times .length::before { content: '('; }
					#kompassi_modal .meta .times .length::after { content: ')'; }
					#kompassi_modal .meta .dimensions {
						margin-top: 0.5em;
					}

				/* TODO: These definitions are common? */
				#kompassi_modal .dimension:empty {
					display: none;
				}
				#kompassi_modal .dimension {
					display: inline;
				}
					#kompassi_modal .dimension .value {
						display: inline-block;
						max-width: 100%;
						padding: 0.2em 0.6em;
						margin-bottom: 0.3em;
						background-color: var(--dimension-bg-color, #222);
						color: var(--dimension-fg-color, #fff);
						border-radius: 9999px;
						overflow-wrap: break-word;
						line-height: 1.2em;
					}

@media screen and (min-width:900px) {
	#kompassi_modal {
		width: auto;
		height: calc( 100vh - 7em );
		max-width: var(--kompassi-modal-max-width);
		right: max( 4em, calc( ( 100vw - var(--kompassi-modal-max-width) ) / 2 ) );
		left: max( 4em, calc( ( 100vw - var(--kompassi-modal-max-width) ) / 2 ) );
		top: 3.5em;
		bottom: 3.5em;
	}
}

#kompassi_modal_bg {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background-color: rgba(0,0,0,0.75);
	z-index: 10000;
}

/*
 *  Popover
 *
 */

#kompassi_program_popover {
	position: fixed;
	z-index: 100000;

	padding: 0.5em;

	background-color: var(--kompassi-popover-bg);
	box-shadow: var(--kompassi-box-shadow);
	border-radius: var(--kompassi-border-radius);
}
	#kompassi_program_popover .title {
		font-weight: bold;
	}
	#kompassi_program_popover .short_blurb {
		font-size: min( 90%, 10.75pt );
		font-style: oblique;
		color: rgba(0,0,0,0.6);
		letter-spacing: 0.015em;
	}
	#kompassi_program_popover .times .length::before { content: '('; }
	#kompassi_program_popover .times .length::after { content: ')'; }


/*
 *  Notes
 *
 */

#kompassi_schedule_notes div {
	padding: 0.5em;
	background-color: rgba(255,255,204,1);
	border-radius: var(--kompassi-border-radius);
	box-shadow: var(--kompassi-box-shadow);
	color: #222;
	margin-bottom: 0.5em;
}

/*
 *  Schedule
 *
 */

#kompassi_schedule article > * {
	display: none;
}

#kompassi_schedule article.filtered {
	display: none !important;
}

#kompassi_schedule article:hover {
	cursor: pointer;
}

/*  Default/common styles  */
#kompassi_schedule article::before {
	background-image: var(--kompassi-program-icon, var(--kompassi-program-icon-default));
	background-size: auto calc( 100% - 3em );
	background-position: 1.5em 50%;
	background-repeat: no-repeat;
}

#kompassi_schedule article .title {
	font-weight: bold;
	letter-spacing: 0.04em;
}

#kompassi_schedule article .actions > ::before {
	content: '';
	display: inline-block;
	width: var(--kompassi-button-icon-size);
	height: var(--kompassi-button-icon-size);
	background-position: 50% 50%;
	background-repeat: no-repeat;
	background-size: contain;

	padding: 0;
	margin: 0;
	transition: 100ms all;
}
/* ... */

